	(epackage-field-set): New.
	(epackage-devel-compose-package-info): New.
	(epackage-devel-compose-package-dir): Add argument ALIST.
	Call `epackage-devel-compose-package-info'.
	(epackage-devel-information-wiki): New.
	(epackage-devel-compose-package-info-from-file): New.
	(epackage-devel-compose-package-info-from-current-buffer): New.
	(epackage-devel-information-buffer): Correct license search.

2011-12-10 Sun  Jari Aalto  <jari.aalto@cante.net>

        * epackage.el (epackage-devel-template-directory):
        Correct docstring.
        (epackage-devel-compose-epkg-dir): New.
        (epackage-devel-compose-1-interactive): New.
        (epackage-devel-compose-main): Simplify.
	(epackage-devel-generate-loaddefs): Write provide statement.
	(epackage-add-provide-to-buffer): New.

2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>

        * epackage.el
        (top level): Reduce use of term Yellow Pages.
        (epackage-batch-ui-upgrade-sources-list): Rename.
        Was `epackage-batch-ui-download-sources-list'.
        (epackage-cmd-upgrade-sources-list): New.
        (epackage--sources-list-url): Rename. Was
        `epackage--sources-yellow-pages-url'.
        (epackage--sources-list-url): Change from defcustom to defvar.
        (epackage-combine-files): Correct variable in loop.
        (epackage--loader-file-byte-compile-flag): Adjust docstring.
        (epackage-cmd-download-sources-list): Do not upgrade automatically.
        (epackage-devel-information-version-main): Rename. Was
        `epackage-devel-information-version'.
        (epackage-devel-information-version-from-lm): New.
        (epackage-devel-information-version-from-variable): New.
        (epackage-devel-information-version-from-comment): New.
        (epackage-devel-compose-git-import): Use `directory-files'
        with 'fullpath argument.
        (epackage-devel-information-date-lm): New.
        (epackage-devel-information-date-main): Rename. Was